| Summary: | ASTERISK-29961: RLS: domain part of 'uri' list attribute mismatch with SUBSCRIBE request | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2022-03-09 16:05:15.000-0600 | Date Closed: | 2022-03-23 17:51:28 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | 16.24.1 18.10.1 19.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When asterisk generates the RLMI part of NOTIFY request, the asterisk uses the local contact uri instead of the URI to which the SUBSCRIBE request is sent.
Because of this mismatch some IP phones (for example Cisco 5XX) ignore this list. According https://datatracker.ietf.org/doc/html/rfc4662#section-5.2 The first mandatory <list> attribute is "uri", which contains the uri that corresponds to the list. Typically, this is the URI to which the SUBSCRIBE request was sent. https://datatracker.ietf.org/doc/html/rfc4662#section-5.3 The "uri" attribute identifies the resource to which the <resource> element corresponds. Typically, this will be a SIP URI that, if subscribed to, would return the state of the resource. For example if the SUBSCRIBE request is sent to sip:rls_1004@asterisk.company.com the asterisk generates the next RLMI --dtqzb Content-ID: <lflen@192.168.100.15> Content-Type: application/rlmi+xml Content-Length: 483 <?xml version="1.0" encoding="UTF-8"?> <list xmlns="urn:ietf:params:xml:ns:rlmi" uri="sip:rls_1004@192.168.100.15:5060" version="1" fullState="false"> <name>rls_1004</name> <resource uri="sip:1001@192.168.100.15:5060"> <name>Alice</name> <instance id="smgzj" state="active" cid="bqgdu@192.168.100.15" /> </resource> </list> --dtqzb Content-ID: <bqgdu@192.168.100.15> Content-Type: application/dialog-info+xml Content-Length: 230 <?xml version="1.0" encoding="UTF-8"?> <dialog-info xmlns="urn:ietf:params:xml:ns:dialog-info" version="39" state="full" entity="sip:1001@192.168.100.15:5060"> <dialog id="1001"> <state>confirmed</state> </dialog> </dialog-info> Better if asterisk would generate RLMI --tswyz Content-ID: <uzogh@asterisk.company.com> Content-Type: application/rlmi+xml Content-Length: 518 <?xml version="1.0" encoding="UTF-8"?> <list xmlns="urn:ietf:params:xml:ns:rlmi" uri="sip:rls_1004@asterisk.company.com" version="1" fullState="false"> <name>rls_1004</name> <resource uri="sip:1001@asterisk.company.com"> <name>Alice</name> <instance id="fldlg" state="active" cid="llhys@asterisk.company.com" /> </resource> <resource uri="sip:1002@asterisk.company.com"> <name>Bob</name> <instance id="zyees" state="active" cid="qqhed@asterisk.company.com" /> </resource> </list> --tswyz Content-ID: <llhys@asterisk.company.com> Content-Type: application/dialog-info+xml Content-Length: 236 <?xml version="1.0" encoding="UTF-8"?> <dialog-info xmlns="urn:ietf:params:xml:ns:dialog-info" version="42" state="full" entity="sip:1001@asterisk.company.com"> <dialog id="1001"> <state>terminated</state> </dialog> </dialog-info> | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-03-09 16:05:16.503-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-03-23 17:51:28.988-0500 Change 18234 merged by Friendly Automation: res_pjsip_pubsub: RLS 'uri' list attribute mismatch with SUBSCRIBE request [https://gerrit.asterisk.org/c/asterisk/+/18234|https://gerrit.asterisk.org/c/asterisk/+/18234] By: Friendly Automation (friendly-automation) 2022-03-23 18:12:44.376-0500 Change 18193 merged by Kevin Harwell: res_pjsip_pubsub: RLS 'uri' list attribute mismatch with SUBSCRIBE request [https://gerrit.asterisk.org/c/asterisk/+/18193|https://gerrit.asterisk.org/c/asterisk/+/18193] By: Friendly Automation (friendly-automation) 2022-03-23 18:12:55.386-0500 Change 18233 merged by Kevin Harwell: res_pjsip_pubsub: RLS 'uri' list attribute mismatch with SUBSCRIBE request [https://gerrit.asterisk.org/c/asterisk/+/18233|https://gerrit.asterisk.org/c/asterisk/+/18233] By: Friendly Automation (friendly-automation) 2022-03-23 18:13:15.487-0500 Change 18235 merged by Kevin Harwell: res_pjsip_pubsub: RLS 'uri' list attribute mismatch with SUBSCRIBE request [https://gerrit.asterisk.org/c/asterisk/+/18235|https://gerrit.asterisk.org/c/asterisk/+/18235] | ||